--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "client": "npm start --prefix client",
     "server": "npm run watch --prefix server",
     "watch": "npm run server & npm run client",
+    "deploy": "npm run build --prefix client && npm start --prefix server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
