--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "set PORT=5000 && node src/server.js",
-    "watch": "set PORT=5000 && nodemon src/server.js"
+    "watch": "set PORT=5000 && nodemon src/server.js",
+    "cluster": "pm2 start ./src/server.js -l log.txt -i max"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parse": "^5.4.0",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.2.2",
+    "morgan": "^1.10.0",
+    "pm2": "^5.3.0"
   }
 }
