--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "csv-parse": "^5.4.0",
     "dotenv": "^16.1.4",
